--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "build": "vite build",
+    "type-check": "vue-tsc -b",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -16,6 +17,7 @@
     "vuetify": "^3.5.1"
   },
   "devDependencies": {
+    "@types/node": "^24.1.0",
     "@vitejs/plugin-vue": "^5.0.0",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.8.3",
@@ -24,3 +26,4 @@
     "vue-tsc": "^2.2.12"
   }
 }
+
